[gd_scene load_steps=3 format=3 uid="uid://72ixod6wvyg1"]

[ext_resource type="PackedScene" uid="uid://c1r7pqg3wkem2" path="res://Texturas/BEAM/source/LowPoly_Explode.fbx" id="1_ocwy7"]
[ext_resource type="Script" uid="uid://b2a7dl8rfun1r" path="res://beam_rifle.gd" id="1_r4v6p"]

[node name="BeamRifle" type="Node3D"]
script = ExtResource("1_r4v6p")
damage_per_second = null
explosion_damage = null
explosion_radius = null
max_charge_time = null
beam_range = null
max_beam_time = null
beam_min_width = null
beam_max_width = null

[node name="MuzzlePoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0523759, -0.199837)

[node name="RayCast3D" type="RayCast3D" parent="MuzzlePoint"]
target_position = Vector3(0, 0, -50)

[node name="ImpactParticles" type="GPUParticles3D" parent="."]

[node name="ChargeParticles" type="GPUParticles3D" parent="."]

[node name="WeaponModel" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="LowPoly_Explode" parent="WeaponModel" instance=ExtResource("1_ocwy7")]
